# capabilities

./: .bazelrc  .env  .gitignore  .golangci.yml  .nvim.lua  .tool-versions  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  go.md  go.mod  go.sum  go.work  go.work.sum  modgraph  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties
capabilitywatcher/: BUILD.bazel  go.mod  go.sum  main.go  package.json  project.json
capabilitywatcher/checks/: BUILD.bazel  cron.go  http_action.go  readcontract.go
capabilitywatcher/internal/: BUILD.bazel  executable_watcher.go  trigger_watcher.go
capabilitywatcher/server/: BUILD.bazel  server.go  server_test.go
chain_capabilities/evm/: .mockery.yaml  BUILD.bazel  README.md  action.go  action_test.go  go.mod  go.sum  main.go  main_test.go  project.json  trigger.go
consensus/: BUILD.bazel  CHANGELOG.md  README.md  go.mod  go.sum  main.go  package.json  project.json
consensus/action/: BUILD.bazel  capability.go  capability_test.go
consensus/format/: errors.go  errors_test.go
consensus/metrics/: BUILD.bazel  metrics.go
consensus/oracle/: BUILD.bazel  batching.go  batching_test.go  common_prefix_suffix_test.go  consensus_execution.go  consensus_execution_test.go  consensus_request.go  consensus_request_test.go  errors_migration_test.go  fields_map_aggregation_test.go  identical_observations_test.go  observation_quorum_tracker.go  observation_quorum_tracker_test.go  plugin.go  plugin_duplicate_outcomes_test.go  plugin_factory.go  plugin_report_generation_test.go  plugin_value_consensus_test.go  reporting_plugin.go  reporting_plugin_factory.go  reporting_plugin_test.go  transmitter.go  transmitter_test.go
cron/: BUILD.bazel  README.md  coverage.txt  cron_capabilities_spec.toml  fail_test.go  go.mod  go.sum  main.go  package.json  project.json
cron/croncap/: cron_trigger-schema.json  cron_trigger_generated.go  gen.go  trigger_builders_generated.go
cron/pb/: trigger.pb.go  trigger_server_gen.go
cron/trigger/: BUILD.bazel  metering_test.go  metrics.go  monitor.go  store.go  trigger.go  trigger_test.go  utils.go
http_action/: BUILD.bazel  README.md  go.mod  go.sum  main.go  project.json
http_action/action/: BUILD.bazel  action.go  action_test.go  validate.go  validate_test.go
http_action/common/: BUILD.bazel  errors.go  metrics.go  metrics_test.go  proxy.go  proxy_test.go  service_config.go  util.go
http_action/gateway/: BUILD.bazel  consistent_hash_selector.go  consistent_hash_selector_test.go  gateway_outbound_proxy.go  gateway_outbound_proxy_routing_test.go  gateway_outbound_proxy_test.go  internal_error.go  user_error.go
http_action/pb/: client.pb.go  client_server_gen.go
http_action/validate/: BUILD.bazel  validator.go  validator_test.go
http_trigger/: BUILD.bazel  README.md  go.mod  go.sum  main.go  project.json
http_trigger/pb/: trigger.pb.go  trigger_server_gen.go
http_trigger/trigger/: BUILD.bazel  auth_metadata_handler.go  config.go  config_test.go  connector_handler.go  connector_handler_test.go  gateway_auth_publisher.go  gateway_auth_publisher_test.go  gateway_metadata_publisher.go  gateway_metadata_publisher_test.go  metrics.go  metrics_test.go  multi_trigger_flag_test.go  project.json  request_cache.go  request_cache_test.go  trigger.go  trigger_test.go  workflow.go  workflow_test.go
integration_tests/consensus/: BUILD.bazel  consensus_test.go
integration_tests/cron/: BUILD.bazel  cron_test.go  setup.go  workflow.go
integration_tests/evm/: BUILD.bazel  artifacts_store.go  evm_logtrigger_test.go  evm_test.go  helpers.go  logTriggerConfig.go  log_trigger_test.go  report.go  write_report_test.go
integration_tests/http/: BUILD.bazel  gateway_config_test_helpers.go  http_action_routing_test.go  http_test.go  http_trigger_test.go  kvstore.go
kvstore/: BUILD.bazel  README.md  go.mod  go.sum  main.go  package.json  project.json
kvstore/action/: BUILD.bazel  action.go
kvstore/kvcap/: BUILD.bazel  gen.go  kv_read_action-schema.json  kv_read_action_generated.go  kv_write_target-schema.json  kv_write_target_generated.go  read_action_builders_generated.go  write_target_builders_generated.go
kvstore/kvreadcap/: gen.go  kv_read_action-schema.json  kv_read_action_generated.go  read_action_builders_generated.go
kvstore/kvrequests/: BUILD.bazel  kvrequests.go  kvrequests_test.go  request.go  request_test.go
kvstore/oracle/: BUILD.bazel  config.go  config_test.go  contract_config_tracker.go  contract_config_tracker_test.go  contract_transmitter.go  identity.go  offchain_config_digester.go  outcome.go  processed_observations.go  reporting_plugin.go  reporting_plugin_factory.go
kvstore/server/: BUILD.bazel  server.go  server_integration_test.go  server_test.go
loadtestwritetarget/: BUILD.bazel  README.md  go.mod  go.sum  main.go  project.json
loadtestwritetarget/loadtestwritetargetcap/: BUILD.bazel  gen.go  loadtest_writetarget_action-schema.json  loadtest_writetarget_action_generated.go  writetarget_action_builders_generated.go
mock/: BUILD.bazel  README.md  go.mod  go.sum  main.go  package.json  project.json  server_test.go
mock/internal/: BUILD.bazel  executable.go  executable_test.go  mock_registry.go  mock_registry_test.go  server.go  trigger.go  trigger_test.go
mock/mockcap/: BUILD.bazel  gen.go  mock_trigger-schema.json  mock_trigger_generated.go  trigger_builders_generated.go
mock/server/: BUILD.bazel  server.go  server_test.go
mock/utils/: BUILD.bazel  utils.go
p2psigner/: BUILD.bazel  go.mod  go.sum  main.go  project.json
p2psigner/action/: BUILD.bazel  action.go  action_test.go
p2psigner/signercap/: BUILD.bazel  action_builders_generated.go  gen.go  signer_action-schema.json  signer_action_generated.go
readcontract/: .mockery.yaml  BUILD.bazel  README.md  fail_test.go  go.mod  go.sum  main.go  package.json  project.json
readcontract/action/: BUILD.bazel  read_contract_action.go  (+4 more)
workflowevent/: BUILD.bazel  README.md  go.mod  go.sum  main.go  package.json  project.json  workflowevent_capabilities_spec.toml
(+878 files in other folders)
