load("@gazelle//:def.bzl", "gazelle")

# The `disable_global` directive stops proto file (re)generation inside of bazel builds and uses the already generated .pb.go files.
# See https://github.com/bazel-contrib/rules_go/blob/master/proto/core.rst#id7 for more details.
# gazelle:proto disable_global
gazelle(name = "gazelle")

