load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "nogo")

# The `disable_global` directive stops proto file (re)generation inside of bazel builds and uses the already generated .pb.go files.
# See https://github.com/bazel-contrib/rules_go/blob/master/proto/core.rst#id7 for more details.
# gazelle:proto disable_global
# Configure gazelle to use @rules_go instead of @io_bazel_rules_go for proto compilers
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc_v2, @rules_go//proto:go_proto
# gazelle:resolve go github.com/smartcontractkit/capabilities/mock/internal/pb //mock/internal/pb:pb
gazelle(name = "gazelle")

nogo(
    name = "my_nogo",
    visibility = ["//visibility:public"],
    # For demonstration purposes only. Uncomment a line in kvstore/main.go for an example of a static analysis violation.
    deps = [
        "@org_golang_x_tools//go/analysis/passes/appends:go_default_library",
    ],
)

# Generate all types
# sh_binary(
#     name = "generate-types",
#     srcs = ["//bazel:custom_scripts/generate_types.sh"],
#     args = [
#         "$(location @com_github_smartcontractkit_chainlink_common//pkg/capabilities/cli/cmd/generate-types:generate-types)",
#     ],
#     data = [
#         "//kvstore/kvcap:schemas",
#         "//loadtestwritetarget/loadtestwritetargetcap:schemas",
#         "//mock/mockcap:schemas",
#         "//p2psigner/signercap:schemas",
#         "//workflowevent/workfloweventcap:schemas",
#         "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/cli/cmd/generate-types",
#     ],
#     visibility = ["//visibility:public"],
# )
