# https://registry.bazel.build/modules/rules_go
bazel_dep(name = "rules_go", version = "0.57.0")

# https://github.com/bazel-contrib/rules_go/blob/v0.57.0/go/private/extensions.bzl
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")

# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")

# https://registry.bazel.build/modules/gazelle
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "toolchains_protoc", version = "0.5.0")

# Prevent version skew by matching protoc version to protobuf version, as C++ is the only lang that
# has no cross-version runtime guarantee:
# https://protobuf.dev/support/cross-version-runtime-guarantee/#cpp
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v31.1",
)

# https://github.com/bazel-contrib/bazel-gazelle/blob/master/extensions.md#go_deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable",  # Disable global proto generation for external dependencies
    ],
)
use_repo(
    go_deps,
    "com_github_go_co_op_gocron_v2",
    "com_github_google_uuid",
    "com_github_hashicorp_go_plugin",
    "com_github_jonboulle_clockwork",
    "com_github_prometheus_client_golang",
    "com_github_shopspring_decimal",
    "com_github_smartcontractkit_capabilities_libs",
    "com_github_smartcontractkit_chainlink_common",
    "com_github_smartcontractkit_chainlink_protos_cre_go",
    "com_github_smartcontractkit_cre_sdk_go",
    "com_github_smartcontractkit_libocr",
    "com_github_stretchr_testify",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_uber_go_zap",
)
