load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cron_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/cron",
    visibility = ["//visibility:private"],
    deps = [
        "//cron/trigger",
        "//libs/loopserver",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron/server",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
    ],
)

go_binary(
    name = "cron",
    embed = [":cron_lib"],
    visibility = ["//visibility:public"],
)
