load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kvstore_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/kvstore",
    visibility = ["//visibility:private"],
    deps = [
        "//kvstore/server",
        "//libs/loopserver",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
    ],
)

go_binary(
    name = "kvstore",
    embed = [":kvstore_lib"],
    visibility = ["//visibility:public"],
)
