load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "p2psigner_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/p2psigner",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/loopserver",
        "//p2psigner/action",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
    ],
)

go_binary(
    name = "p2psigner",
    embed = [":p2psigner_lib"],
    visibility = ["//visibility:public"],
)
