load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "readcontract_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/readcontract",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/loopserver",
        "//readcontract/action",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
        "@com_github_smartcontractkit_chainlink_common//pkg/services",
        "@com_github_smartcontractkit_chainlink_common//pkg/types",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
    ],
)

go_binary(
    name = "readcontract",
    embed = [":readcontract_lib"],
    visibility = ["//visibility:public"],
)
