load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "workflowevent_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/workflowevent",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/loopserver",
        "//workflowevent/target",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
    ],
)

go_binary(
    name = "workflowevent",
    embed = [":workflowevent_lib"],
    visibility = ["//visibility:public"],
)
