load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "checks",
    srcs = [
        "cron.go",
        "http_action.go",
    ],
    importpath = "github.com/smartcontractkit/capabilities/capabilitywatcher/checks",
    visibility = ["//visibility:public"],
    deps = [
        "//capabilitywatcher/internal",
        "@com_github_google_uuid//:uuid",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/actions/http",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
