load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "executable_watcher.go",
        "trigger_watcher.go",
    ],
    importpath = "github.com/smartcontractkit/capabilities/capabilitywatcher/internal",
    visibility = ["//capabilitywatcher:__subpackages__"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
    ],
)
