load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "evm_lib",
    srcs = ["main.go"],
    importpath = "github.com/smartcontractkit/capabilities/chain_capabilities/evm",
    visibility = ["//visibility:private"],
    deps = [
        "//chain_capabilities/evm/actions",
        "//chain_capabilities/evm/config",
        "//chain_capabilities/evm/consensus",
        "//chain_capabilities/evm/consensus/height",
        "//chain_capabilities/evm/consensus/metrics",
        "//chain_capabilities/evm/consensus/oracle",
        "//chain_capabilities/evm/consensus/poller",
        "//chain_capabilities/evm/monitoring",
        "//chain_capabilities/evm/trigger",
        "//libs/loopserver",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_smartcontractkit_chain_selectors//:chain-selectors",
        "@com_github_smartcontractkit_chainlink_common//pkg/beholder",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/chain-capabilities/evm",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/chain-capabilities/evm/server",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/loop",
        "@com_github_smartcontractkit_chainlink_common//pkg/settings/limits",
        "@com_github_smartcontractkit_chainlink_common//pkg/types",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
        "@com_github_smartcontractkit_libocr//offchainreporting2plus/types",
    ],
)

go_binary(
    name = "evm",
    embed = [":evm_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "evm_test",
    srcs = ["main_test.go"],
    embed = [":evm_lib"],
    deps = [
        "//chain_capabilities/evm/config",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/types",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core/mocks",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/mocks",
        "@com_github_smartcontractkit_chainlink_evm//pkg/testutils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
