load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/smartcontractkit/capabilities/consensus/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_smartcontractkit_chainlink_common//pkg/beholder",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
    ],
)
