load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oracle",
    srcs = [
        "consensus_execution.go",
        "consensus_request.go",
    ],
    importpath = "github.com/smartcontractkit/capabilities/consensus/oracle",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus/oracle/types",
        "@com_github_shopspring_decimal//:decimal",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//sdk",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//values",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//values/pb",
        "@com_github_smartcontractkit_libocr//offchainreporting2plus/types",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "oracle_test",
    srcs = [
        "common_prefix_suffix_test.go",
        "consensus_execution_test.go",
        "fields_map_aggregation_test.go",
        "identical_observations_test.go",
    ],
    embed = [":oracle"],
    deps = [
        "@com_github_shopspring_decimal//:decimal",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//sdk",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//values",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//values/pb",
        "@com_github_smartcontractkit_cre_sdk_go//cre",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
