load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trigger",
    srcs = [
        "logger.go",
        "metrics.go",
        "monitor.go",
        "store.go",
        "trigger.go",
        "utils.go",
    ],
    importpath = "github.com/smartcontractkit/capabilities/cron/trigger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_co_op_gocron_v2//:gocron",
        "@com_github_google_uuid//:uuid",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_smartcontractkit_chainlink_common//pkg/beholder",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/triggers/cron",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron/server",
        "@com_github_smartcontractkit_chainlink_common//pkg/custmsg",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/services",
        "@com_github_smartcontractkit_chainlink_common//pkg/services/orgresolver",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
        "@com_github_smartcontractkit_chainlink_common//pkg/workflows",
        "@com_github_smartcontractkit_chainlink_common//pkg/workflows/events",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "trigger_test",
    srcs = ["trigger_test.go"],
    embed = [":trigger"],
    deps = [
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/triggers/cron",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/triggers/cron/server",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/services/orgresolver",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
        "@com_github_smartcontractkit_chainlink_protos_cre_go//values",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_uber_go_zap//:zap",
    ],
)
