load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "action",
    srcs = ["action.go"],
    importpath = "github.com/smartcontractkit/capabilities/http_action/action",
    visibility = ["//visibility:public"],
    deps = [
        "//http_action/common",
        "//http_action/gateway",
        "//http_action/validate",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/actions/http",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/actions/http/server",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/services",
        "@com_github_smartcontractkit_chainlink_common//pkg/settings/limits",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
    ],
)

go_test(
    name = "action_test",
    srcs = ["action_test.go"],
    embed = [":action"],
    deps = [
        "//http_action/common",
        "//http_action/validate",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities",
        "@com_github_smartcontractkit_chainlink_common//pkg/capabilities/v2/actions/http",
        "@com_github_smartcontractkit_chainlink_common//pkg/logger",
        "@com_github_smartcontractkit_chainlink_common//pkg/settings/cresettings",
        "@com_github_smartcontractkit_chainlink_common//pkg/settings/limits",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core",
        "@com_github_smartcontractkit_chainlink_common//pkg/types/core/mocks",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
